Structural improvements, starting MockGals
Lots of additions and structural improvements were made (generalized
below). Also the files for starting work on MockGals were included in
the history, its argument parsing and configuration file reading parts
are now ready.

 - The "default files" were changed to "configuration files" in all
   the source code and documentation. The `.def` suffix was changed to
   `.conf` and the variable, function and file names were also
   changed. Also the directory of the user and system configuration
   files was changed to `$HOME/.local/etc` and `prefix/etc`. Since all
   the configuration files begin with `astr`, they will be clearly
   separated from any other possibly existing configuration file.

 - The readconfig function in ui.c was also changed. I wrote a line
   parser my self instead of using strtok, because I needed to include
   quotes for some variables and manging those with strtok was not
   easy with all the subsequent tests on its values. But now, it works
   nicely and is easy to understand.

 - Since equations started showing up in the MockGals explanation, I
   added the `doc/formath.texi` macros to print the equations
   correctly in TeX and in HTML (to use MathJax) and other formats.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,38 @@
+2015-01-05  Mohammad Akhlaghi  <makhlaghi@gmail.com>
+
+	* doc/formath.texi: Added. A set of macros to write equations
+	nicely in TeX, HTML (using MathJax).
+
+	* src/imgcrop/astrimgcrop.def: renamed to
+	src/imgcrop/astrimgcrop.conf.
+
+	* lib/defaults.c: renamed to include/configfiles.c.
+
+	* lib/checkset.c (stringhasspace): Function added.
+
+	* include/fixedstringmacros.h (SHORTCOPYRIGHT): 2015 added.
+	(MOREHELPINFO): Corrected info explanation in help output.
+
+	* include/defaults.h: renamed to include/configfiles.h
+
+	* include/commonparams.h (commonparams): Similar to the change in
+	commonargs.h.
+
+	* include/commonargs.h (argp_option): `--dirdefaults` and
+	`--userdefaults` changed to `--setdirconf` and `--setusrconf`.
+
+	* doc/astrutils.texi: Included formath.texi to display math
+	equations, updates to the text.
+
+	* doc/Makefile.am (headers): Used a shell '*' instead of calling
+	each program separately. This was enabled with the new file
+	structure.
+
+	* configure.ac: Changed all default names to configure for a
+	configuration file, not a default file (only name).
+
+	* Makefile.am: MockGals conditional compilation added.
+
 2014-12-30  Mohammad Akhlaghi  <makhlaghi@gmail.com>
 
 	* tests/basicchecks.sh: New file (common tests for all tests).
