MockGals changed to MakeProfiles, some corrections
 - What was supposed to be MockGals before will now be broken up into
   three separate programs: one to make mock profiles (galaxies and
   the PSF), one to convolve the image and one to add noise. Each of
   these program can be used in various circumstances, not just what I
   had in mind for MockGals. For example, when making the profiles
   separately, we can use them for fitting. Convolution or adding
   noise can also be used in other contexts too. A simple shell script
   can be used to unify any desired way to mix these.

 - For synchronizing threads, I used a combination of a mutex and a
   conditional variable! I learnt recently that using barriers in
   pthread is much more easier! So I converted all parallel operations
   to use this framework from now on.

 - In converting a text table to a C array, I would replace a
   non-number with the smallest possible double value (type of the
   array). Now it will use NaN instead.

 - Added a function in fitsarrayvv.c to convert the input type to any
   output type depending on the input and desired BITPIX. With this
   function, the conversion functions in arraymanip are no longer
   needed.

 - Changed Copyright years to 2013-2015 with the command:

       find ./astrutils/ -name *.[ch] | \
       parallel sed s/2013-2014/2013-2015/ {} -i

 - Updated the documentation and the build process for the new names.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,37 @@
+2015-01-12  Mohammad Akhlaghi  <makhlaghi@gmail.com>
+
+	* src/imgcrop/imgcrop.c: Using pthread_barrier_wait for
+	synchronizing threads instead of the mutexes and conditional
+	variables before.
+
+	* lib/txtarrayvv.c: When the value couldn't be read as a number,
+	it would be saved as the lowest possible double value. Now it will
+	be saved as a NaN.
+
+	* lib/fitsarrayvv.c (nultovalue): Convert blank values in images
+	to a given values.
+	(changetype): Change the type of an image.
+
+	* lib/checkset.c (nameisawritablefile): Corrected to accurately
+	check if the given name is usable as output.
+
+	* lib/arraymanip.c (converttofloat): Removed conversion
+	functions. These were mainly for converting a FITS image type to
+	the desired type. Now there is one function in fitsarrayvv.c which
+	will do the conversion.
+
+	* include/checkset.h (CHECKCOLINCAT): Added to check column number
+	and all values within a column.
+
+	* doc/astrutils.texi: Updated the text, changing names and
+	explanations.
+
+	* configure.ac: Changed MockGals, mockgals, name to MakeProfiles,
+	mkprof.
+
+	* Makefile.am (EXTRA_DIST): Moved the library header files to the
+	Makefile.am in lib/.
+
 2015-01-06  Mohammad Akhlaghi  <makhlaghi@gmail.com>
 
 	* src/mockgals/args.h (parse_opt): Removed the check below.
